syntax = "proto3";

option csharp_namespace = "Proto.Notifications.Sprint";

import "google/protobuf/timestamp.proto";
import "DTO/trace_data.proto";

service NotificationService {
  rpc SendSprintActiveStatusSet(SprintActiveStatusSetNotification) returns (NotificationResponse);
  rpc SendSprintCreated(SprintCreatedNotification) returns (NotificationResponse);
  rpc SendSprintDataUpdated(SprintDataUpdatedNotification) returns (NotificationResponse);
  rpc SendTicketAddedToActiveSprint(TicketAddedToActiveSprintNotification) returns (NotificationResponse);
  rpc SendTicketAddedToSprint(TicketAddedToSprintNotification) returns (NotificationResponse);
}

service SprintNotificationService {
  rpc SubscribeSprintNotifications(SubscribeRequest) returns (stream SprintNotification);
}

message SprintNotification {
  oneof notification {
    SprintActiveStatusSetNotification sprintActiveStatusSet = 1;
    SprintCreatedNotification sprintCreated = 2;
    SprintDataUpdatedNotification sprintDataUpdated = 3;
    TicketAddedToActiveSprintNotification ticketAddedToActiveSprint = 4;
    TicketAddedToSprintNotification ticketAddedToSprint = 5;
  }
}

message SubscribeRequest {
}

message SprintActiveStatusSetNotification {
  string sprintId = 1;
  bool isActive = 2;
  TraceDataProto traceData = 3;
}

message SprintCreatedNotification {
  string sprintId = 1;
  string name = 2;
  google.protobuf.Timestamp startTime = 3;
  google.protobuf.Timestamp endTime = 4;
  bool isActive = 5;
  repeated string ticketIds = 6;
  TraceDataProto traceData = 7;
}

message SprintDataUpdatedNotification {
  string sprintId = 1;
  string name = 2;
  google.protobuf.Timestamp startTime = 3;
  google.protobuf.Timestamp endTime = 4;
  TraceDataProto traceData = 5;
}

message TicketAddedToActiveSprintNotification {
  string ticketId = 1;
  TraceDataProto traceData = 2;
}

message TicketAddedToSprintNotification {
  string sprintId = 1;
  string ticketId = 2;
  TraceDataProto traceData = 3;
}

message NotificationResponse {
  bool success = 1;
}
